tests/paczka1/fuzzy1/88407091.err
Error in line 7: pLPNP A518 8,30
Error in line 6: FMkkUXhyr A518 41,7
Error in line 11: FMkkUXhyr S716 -1,2
Error in line 9: PZS S716 93,3
Error in line 14: pLPNP A518 39,2
Error in line 15: yCPP6ljXT S548 79,6
Error in line 10: FMkkUXhyr S716 78,3
Error in line 30: FMkkUXhyr A638 58,83
Error in line 23: yCPP6ljXT A518 37,0
Error in line 33: yCPP6ljXT S716 5,1
Error in line 37: yCPP6ljXT A518 11,0
